<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_header" />

    <TextView
        android:id="@+id/comment_screen_no_comments_txt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lbl_no_comments_found"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_38"
        android:visibility="gone" />

    <ListView
        android:id="@+id/comment_screen_listviw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#0000"
        android:divider="@drawable/seprator"
        android:paddingRight="@dimen/margin_8"
        android:scrollingCache="false"></ListView>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/margin_8"
        android:src="@drawable/seprator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_8">

        <EditText
            android:id="@+id/comment_screen_comment_edtTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/comment_text_input"
            android:hint="@string/lbl_wrt_comment"
            android:padding="@dimen/margin_5"
            android:singleLine="true"
            android:textColorHint="@color/grey"></EditText>

        <Button
            android:id="@+id/comment_screen_send_comment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:background="@drawable/send_btn"
            android:text="@string/lbl_send"
            android:textColor="@color/grey" />
    </LinearLayout>

</LinearLayout>