<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/top_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/margin_10">

        <EditText
            android:id="@+id/change_pass_old_pass_txtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@android:color/transparent"
            android:hint="@string/lbl_old_pass"
            android:inputType="textPassword"
            android:padding="@dimen/margin_5"
            android:textColor="#3c3c3c"
            android:textSize="@dimen/text_size_28"></EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seprator" />

        <EditText
            android:id="@+id/change_pass_new_pass_txtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@android:color/transparent"
            android:hint="@string/lbl_new_pass"
            android:inputType="textPassword"
            android:padding="@dimen/margin_5"
            android:textColor="#3c3c3c"
            android:textSize="@dimen/text_size_28"></EditText>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seprator" />

        <EditText
            android:id="@+id/change_pass_confirm_new_pass_txtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@android:color/transparent"
            android:hint="@string/lbl_confirm_new_pass"
            android:inputType="textPassword"
            android:padding="@dimen/margin_5"
            android:textColor="#3c3c3c"
            android:textSize="@dimen/text_size_28"></EditText>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seprator" />
    </LinearLayout>

</LinearLayout>