<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/top_header" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_screen_main_profile_img_imgVw"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/icon_main_image_size"
                android:scaleType="fitXY"
                android:src="@drawable/blur_bg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.ta.wootrix.utils.CircularImageView
                        android:id="@+id/profile_screen_rounded_profile_img_imgVw"
                        android:layout_width="@dimen/account_image_height_cum_width"
                        android:layout_height="@dimen/account_image_height_cum_width"
                        android:src="@drawable/profile_image_placeholder"
                        app:border="true"
                        app:border_color="@color/trans_50_bg"
                        app:border_width="@dimen/margin_5"
                        app:shadow="false" />

                    <ImageView
                        android:id="@+id/profile_screen_update_image_imgVw"
                        android:layout_width="@dimen/icon_edt_size"
                        android:layout_height="@dimen/icon_edt_size"
                        android:layout_gravity="top|right"
                        android:src="@drawable/icon_edit_profile_image" />
                </FrameLayout>

                <TextView
                    android:id="@+id/profile_screen_profilename_txtVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_30"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_screen_email_txtVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_24" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_10"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/profile_screen_showpage_toggle_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/showpage_toggle_selector"
                android:padding="@dimen/margin_10"
                android:text="@string/lbl_showpage"
                android:textColor="#3c3c3c"
                android:textSize="@dimen/text_size_26" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/seprator" />

            <!--<TextView-->
                <!--android:id="@+id/profile_screen_add_account"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableRight="@drawable/icon_arrow"-->
                <!--android:gravity="center_vertical"-->
                <!--android:padding="@dimen/margin_10"-->
                <!--android:text="@string/lbl_add_account"-->
                <!--android:textColor="#3c3c3c"-->
                <!--android:textSize="@dimen/text_size_26" />-->

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/seprator" />-->

            <TextView
                android:id="@+id/profile_screen_change_language_txtVw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_10"
                android:text="@string/lbl_chng_language"
                android:textColor="#3c3c3c"
                android:textSize="@dimen/text_size_26" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/seprator" />

            <TextView
                android:id="@+id/profile_screen_change_email_txtVw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_10"
                android:text="@string/lbl_change_email"
                android:textColor="#3c3c3c"
                android:textSize="@dimen/text_size_26" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/seprator" />

            <!--<TextView-->
                <!--android:id="@+id/profile_screen_changepass_txtVw"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableRight="@drawable/icon_arrow"-->
                <!--android:gravity="center_vertical"-->
                <!--android:padding="@dimen/margin_10"-->
                <!--android:text="@string/lbl_change_pass"-->
                <!--android:textColor="#3c3c3c"-->
                <!--android:textSize="@dimen/text_size_26" />-->

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/seprator" />-->

            <!--<TextView-->
                <!--android:id="@+id/profile_screen_rateapp_txtVw"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableRight="@drawable/icon_arrow"-->
                <!--android:gravity="center_vertical"-->
                <!--android:padding="@dimen/margin_10"-->
                <!--android:text="@string/lbl_rate_app"-->
                <!--android:textColor="#3c3c3c"-->
                <!--android:textSize="@dimen/text_size_26" />-->

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/seprator" />-->

            <!--<TextView-->
                <!--android:id="@+id/profile_screen_aboutus_txtVw"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableRight="@drawable/icon_arrow"-->
                <!--android:gravity="center_vertical"-->
                <!--android:padding="@dimen/margin_10"-->
                <!--android:text="@string/lbl_abt_us"-->
                <!--android:textColor="#3c3c3c"-->
                <!--android:textSize="@dimen/text_size_26" />-->

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/seprator" />-->
        </LinearLayout>
    </LinearLayout>

</ScrollView>